--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 remote_theme: pages-themes/cayman
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+title: [Dr. Federico Dattila]
+description: [Un ricercatore a caccia di CO<sub>2</sub>!]
