--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,10 @@ nav:
     url: "/about/"
   - title: "Research"
     url: "/research/"
-  - title: "Book a communication talk"
+  - title: "Book an outreach activity"
     url: "/talk/"
   - title: "Courses"
     url: "/courses/"
-  - title: "Science Communication"
-    url: "/science-communication/"
   - title: "Upcoming Events"
     url: "/events/"
   - title: "Contacts"
