--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Federico Dattila - A researcher seeking to reduce CO<sub>2</sub> "
+title: "Federico Dattila - A researcher seeking to reduce carbon dioxide "
 email: "federico.dattila@polito.it"
 description: "Welcome to the personal website of Federico Dattila, featuring research, science communication, and courses."
 baseurl: "" # The subpath of your site, e.g., /blog
