--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ plugins:
   - jekyll-sitemap
 
 # Theme configuration (optional, if using a specific theme)
-theme: architect
+theme: minima
 
 # Footer information
 footer:
