--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Federico Dattila - A researcher seeking to reduce carbon dioxide "
+title: "Federico Dattila - The carbon dioxide hunter"
 email: "federico.dattila@polito.it"
 description: "Welcome to my personal website, featuring myself, my research, my communication activities."
 baseurl: "" # The subpath of your site, e.g., /blog
