--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,12 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
 
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
 # Theme configuration (optional, if using a specific theme)
-theme: minima
+# theme: minima
 
 # Footer information
 footer:
