--- a/_config.yml
+++ b/_config.yml
@@ -2,19 +2,29 @@
 title: "Federico Dattila - The carbon dioxide hunter"
 email: "federico.dattila@polito.it"
 description: "Welcome to my personal website, featuring myself, my research, my communication activities."
-baseurl: "" # The subpath of your site, e.g., /blog
-url: "https://fededat.github.io" # Your GitHub Pages URL
+baseurl: ""  # The subpath of your site, e.g., /blog
+url: "https://fededat.github.io"  # Your GitHub Pages URL
 lang: "en"  # Default language is English
 
-# Navigation
+# Navigation configuration
 nav:
-  - Home: /
-  - About Federico: /about-federico/
-  - Book an activity: /communication/
-  - Upcoming Events: /events/
-  - Research: /research/
-  - Courses: /courses/
-  - Contacts: /contacts/
+  en:
+    - Home: /
+    - About Federico: /about-federico/
+    - Book an activity: /communication/
+    - Upcoming Events: /events/
+    - Research: /research/
+    - Courses: /courses/
+    - Contacts: /contacts/
+
+  it:
+    - Home: /it/
+    - Chi sono: /it/federico/
+    - Prenota un'attività: /it/comunicazione/
+    - Eventi: /it/eventi/
+    - Ricerca: /it/ricerca/
+    - Corsi: /it/corsi/
+    - Contatti: /it/contatti/
 
 # Header pages (paths of pages)
 header_pages:
@@ -25,7 +35,7 @@ header_pages:
   - courses.md
   - contacts.md
 
-# Default page settings
+# Defaults
 defaults:
   - scope:
       path: ""
@@ -71,7 +81,7 @@ jekyll-seo-tag:
   lang: "en"
   author: "Federico Dattila"
 
-# Language selector (useful for switching between languages)
+# Language selector
 language_selector: true
 
 # Adding the Italian version of the site
@@ -82,4 +92,3 @@ languages:
   - lang: "it"
     url: "/it/"
     title: "Federico Dattila - Il cacciatore di anidride carbonica"
-
