--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ nav:
     - Contacts: /en/contacts/
 
   it:
-    - Home: /it/
+    - Home: /
     - Chi sono: /it/federico/
     - Prenota un'attività: /it/comunicazione/
     - Eventi: /it/eventi/
