--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ url: "https://fededat.github.io"  # Your GitHub Pages URL
 # Navigation configuration
 nav:
   - Home: /
-  - Chi sono: /it/federico/
-  - Prenota un'attività: /it/comunicazione/
-  - Eventi: /it/eventi/
-  - Ricerca: /it/ricerca/
-  - Corsi: /it/corsi/
-  - Contatti: /it/contatti/
+  - Chi sono: /federico/
+  - Prenota un'attività: /comunicazione/
+  - Eventi: /eventi/
+  - Ricerca: /ricerca/
+  - Corsi: /corsi/
+  - Contatti: /contatti/
 
 # Exclude files from processing
 exclude:
