--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ plugins:
   - jekyll-sitemap
 
 # Theme configuration (optional, if using a specific theme)
-theme: minima
+theme: minimal-mistakes-jekyll
 
 # Footer information
 footer:
