--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,18 @@ nav:
   - Corsi: /corsi/
   - Contatti: /contatti/
 
+
+# If you want to link only specific pages in your header, uncomment
+# this and add the path to the pages in order as they should show up
+header_pages:
+  - Home: /
+  - Chi sono: /federico/
+  - Prenota un'attività: /comunicazione/
+  - Eventi: /eventi/
+  - Ricerca: /ricerca/
+  - Corsi: /corsi/
+  - Contatti: /contatti/
+
 # Exclude files from processing
 exclude:
   - "Gemfile"
