--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,14 @@ baseurl: ""  # The subpath of your site, e.g., /blog
 url: "https://fededat.github.io"  # Your GitHub Pages URL
 
 # Navigation configuration
-nav:
-  - Home: /
-  - Chi sono: /federico/
-  - Prenota un'attività: /comunicazione/
-  - Eventi: /eventi/
-  - Ricerca: /ricerca/
-  - Corsi: /corsi/
-  - Contatti: /contatti/
-
+# nav:
+#  - Home: /
+#  - Chi sono: /federico/
+#  - Prenota un'attività: /comunicazione/
+#  - Eventi: /eventi/
+#  - Ricerca: /ricerca/
+#  - Corsi: /corsi/
+#  - Contatti: /contatti/
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
